--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -19,7 +19,7 @@
 //npc: npc/custom/card_remover.txt
 //npc: npc/custom/item_signer.txt
 //npc: npc/custom/woe_controller.txt
-
+npc: npc/custom/powerballv3.txt
 // ----------------------- Other Scripts -----------------------
 // -- Private MVP & Branch Room
 //npc: npc/custom/etc/mvp_room.txt
@@ -79,6 +79,7 @@
 //npc: npc/custom/quests/valhallen.txt
 //npc: npc/custom/quests/kaho_balmung.txt
 //npc: npc/custom/quests/kahohorn.txt
+npc: npc/custom/eden_test.txt
 
 // ----------------------- Event Scripts -----------------------
 // -- Mini-Game Events
